<resources>
    <string name="app_name">Week 4 Task</string>
    <string name="Machiavelli">Ola Machiavelli</string>
    <string name="darot">Darot</string>
    <string name="debit_card">Debit Card</string>
    <string name="account_balance">$ 23, 481,000.00</string>
    <string name="card_number">4321</string>
    <string name="card_type">VISA</string>
    <string name="transfer">Transfer</string>
    <string name="mobile">Mobile</string>
    <string name="utilities">Utilities</string>
    <string name="qr_code">QR Code</string>
    <string name="dollar">$</string>
    <string name="_234810">$234810</string>
    <string name="cash_loan">Cash Loan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partners">Partners</string>
    <string name="support_fragment">Support Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="more_fragment">More Fragment</string>
    <string name="payments_fragments">Payments Fragments</string>
    <string name="more">More</string>
    <string name="support">Support</string>
    <string name="history">History</string>
    <string name="payments">Payments</string>
    <string name="products">Products</string>
</resources>