<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ProductFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">


       <androidx.viewpager2.widget.ViewPager2
           android:id="@+id/viewPager2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="4dp"
           android:paddingTop="12dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />


       <com.google.android.material.tabs.TabLayout
           android:id="@+id/indicator"
           android:layout_width="wrap_content"
           android:layout_height="20dp"
           android:layout_marginStart="50dp"
           android:layout_marginLeft="50dp"
           android:layout_marginTop="12dp"
           android:layout_marginRight="50dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/viewPager2"
           app:tabIndicator="@color/white"/>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardView2"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:layout_marginStart="20dp"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="27dp"
           android:layout_marginRight="27dp"
           app:cardCornerRadius="5dp"
           app:layout_constraintEnd_toStartOf="@+id/cardView"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/indicator"
           tools:layout_editot_absoluteY="251dp">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:layout_width="22dp"
                   android:layout_height="18dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="16dp"
                   android:src="@drawable/transfer"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="0dp"
                   android:layout_height="22dp"
                   android:layout_marginStart="3dp"
                   android:layout_marginLeft="3dp"
                   android:layout_marginEnd="3dp"
                   android:layout_marginRight="3dp"
                   android:layout_marginBottom="4dp"
                   android:gravity="center_horizontal"
                   android:text="@string/transfer"
                   android:textAlignment="center"
                   android:textSize="12sp"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintHorizontal_bias="0.0"
                   app:layout_constraintStart_toStartOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardView"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:layout_marginStart="27dp"
           android:layout_marginLeft="27dp"
           android:layout_marginTop="41dp"
           app:layout_constraintStart_toEndOf="@+id/cardView2"
           app:layout_constraintTop_toBottomOf="@+id/viewPager2">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="16dp"
                   android:src="@drawable/smartphone__2__1"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="0dp"
                   android:layout_height="22dp"
                   android:layout_marginTop="44dp"
                   android:gravity="center_horizontal"
                   android:text="@string/mobile"
                   android:textAlignment="center"
                   android:textSize="12sp"
                   android:textStyle="bold"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

           </androidx.constraintlayout.widget.ConstraintLayout>
           -->


       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:id="@+id/cardView3"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:layout_marginStart="26dp"
           android:layout_marginLeft="26dp"
           android:layout_marginTop="41dp"
           android:layout_marginEnd="29dp"
           android:layout_marginRight="29dp"
           app:layout_constraintEnd_toStartOf="@+id/cardView4"
           app:layout_constraintStart_toEndOf="@+id/cardView"
           app:layout_constraintTop_toBottomOf="@+id/viewPager2">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:id="@+id/imageView3"
                   android:layout_width="20dp"
                   android:layout_height="21dp"
                   android:layout_marginTop="16dp"
                   android:src="@drawable/home"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="22dp"
                   android:layout_marginTop="7dp"
                   android:gravity="center_horizontal"
                   android:text="@string/utilities"
                   android:textAlignment="center"
                   android:textSize="12sp"
                   android:textStyle="bold"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView3" />

           </androidx.constraintlayout.widget.ConstraintLayout>


       </androidx.cardview.widget.CardView>


       <androidx.cardview.widget.CardView
           android:id="@+id/cardView4"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:layout_marginStart="29dp"
           android:layout_marginLeft="29dp"
           android:layout_marginTop="41dp"
           app:layout_constraintStart_toEndOf="@+id/cardView3"
           app:layout_constraintTop_toBottomOf="@+id/viewPager2">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <ImageView
                   android:id="@+id/imageView2"
                   android:layout_width="24dp"
                   android:layout_height="28dp"
                   android:layout_marginTop="16dp"
                   android:src="@drawable/qr_code_1"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="22dp"
                   android:gravity="center_horizontal"
                   android:text="@string/qr_code"
                   android:textAlignment="center"
                   android:textSize="12sp"
                   android:textStyle="bold"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/imageView2" />

           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="409dp"
           android:layout_height="324dp"
           android:layout_marginTop="68dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/cardView2">

           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginLeft="16dp"
               android:layout_marginTop="16dp"
               android:text="Special Offers"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <androidx.cardview.widget.CardView
               android:id="@+id/cardView6"
               android:layout_width="155dp"
               android:layout_height="90dp"
               android:layout_marginStart="25dp"
               android:layout_marginLeft="25dp"
               android:layout_marginTop="16dp"
               android:backgroundTint="#1E1B1B"
               app:cardCornerRadius="12dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/textView5"
               tools:targetApi="lollipop">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   app:layout_constraintStart_toStartOf="parent">

                   <TextView
                       android:id="@+id/loan"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="16dp"
                       android:layout_marginLeft="16dp"
                       android:layout_marginTop="16dp"
                       android:text="@string/cash_loan"
                       android:textColor="@color/white"
                       android:textSize="12sp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <TextView
                       android:id="@+id/amount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="16dp"
                       android:layout_marginLeft="16dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/_234810"
                       android:textColor="@color/white"
                       android:textSize="15sp"
                       android:textStyle="bold"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintStart_toStartOf="parent" />

                   <TextView
                       android:layout_width="26dp"
                       android:layout_height="27dp"
                       android:layout_marginStart="38dp"
                       android:layout_marginLeft="38dp"
                       android:layout_marginTop="29dp"
                       android:layout_marginEnd="16dp"
                       android:layout_marginRight="16dp"
                       android:outlineSpotShadowColor="@color/white"
                       android:text="@string/dollar"
                       android:textAlignment="center"
                       android:textColor="@color/white"
                       android:textSize="20sp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toEndOf="@+id/amount"
                       app:layout_constraintTop_toTopOf="parent"
                       tools:ignore="RtlCompat"
                       tools:targetApi="p" />
               </androidx.constraintlayout.widget.ConstraintLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:id="@+id/cardView5"
               style="@style/cardStyle"
               android:layout_width="155dp"
               android:layout_height="90dp"
               android:layout_marginEnd="25dp"
               android:layout_marginRight="25dp"
               android:backgroundTint="#1E1B1B"
               app:cardCornerRadius="12dp"
               app:layout_constraintBottom_toBottomOf="@+id/cardView6"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="@+id/cardView6">

               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   app:layout_constraintStart_toStartOf="parent">

                   <TextView
                       android:id="@+id/textView3"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="16dp"
                       android:layout_marginLeft="16dp"
                       android:layout_marginTop="16dp"
                       android:text="@string/cash_loan"
                       android:textColor="@color/white"
                       android:textSize="12sp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />

                   <TextView
                       android:id="@+id/textView2"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="16dp"
                       android:layout_marginLeft="16dp"
                       android:layout_marginTop="21dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/_234810"
                       android:textColor="@color/white"
                       android:textSize="15sp"
                       android:textStyle="bold"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/textView3" />

                   <TextView
                       android:id="@+id/dollor_sign"
                       android:layout_width="26dp"
                       android:layout_height="27dp"
                       android:layout_marginStart="38dp"
                       android:layout_marginLeft="38dp"
                       android:layout_marginTop="29dp"
                       android:layout_marginEnd="16dp"
                       android:layout_marginRight="16dp"
                       android:outlineSpotShadowColor="@color/white"
                       android:text="@string/dollar"
                       android:textAlignment="center"
                       android:textColor="@color/white"
                       android:textSize="20sp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toEndOf="@+id/textView2"
                       app:layout_constraintTop_toTopOf="parent"
                       tools:ignore="RtlCompat"
                       tools:targetApi="p" />
               </androidx.constraintlayout.widget.ConstraintLayout>


           </androidx.cardview.widget.CardView>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recyclerView"
               android:layout_width="0dp"
               android:layout_height="100dp"
               android:layout_marginStart="10dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="76dp"
               android:layout_marginEnd="10dp"
               android:layout_marginRight="10dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/cardView6"

               >


           </androidx.recyclerview.widget.RecyclerView>

           <TextView
               android:id="@+id/textView4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="25dp"
               android:layout_marginLeft="25dp"
               android:layout_marginTop="25dp"
               android:text="@string/partners"
               android:textColor="@color/black"
               android:textSize="20sp"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/cardView6" />


       </androidx.constraintlayout.widget.ConstraintLayout>


   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>